optimize UrlReplacer code, new UrlReplacer JUnit tests, update in offline.conf showcase configurations